@@ -314,7 +314,7 @@ Or instead of LSP-julia, add the following client configuration:
 alternatively you can use the less maintained [lua-lsp](https://github.com/Alloyed/lua-lsp)
 
 
-### Lisp<a name="lisp"
+### Lisp<a name="lisp">
 
 1. Install [cc-lsp](https://github.com/cxxxr/cl-lsp) using Roswell
 2. Add this configuration to your clients in the LSP settings:
@@ -334,7 +334,7 @@ alternatively you can use the less maintained [lua-lsp](https://github.com/Alloy
     ],
     "syntaxes":
     [
-        "Packages/Lisp/Lisp.sublime-syntax""
+        "Packages/Lisp/Lisp.sublime-syntax"
     ]
 }
 ```
@@ -408,6 +408,26 @@ For more details see this [issue](https://github.com/PowerShell/PowerShellEditor
 }
 ```
 
+### Elixir
+
+1. Download the prebuilt binaries or compile [elixir-ls](https://github.com/elixir-lsp/elixir-ls). This will get you a folder containing `language_server.sh` among other things
+2. Download the official [Elixir package](https://packagecontrol.io/packages/Elixir) for syntax definitions
+3. Update the elixir-ls configuration to point to your `language_server.sh`
+
+```
+    "elixir-ls": {
+      "command": ["/home/someUser/somePlace/elixir-ls/release/language_server.sh"],
+      "enabled": true,
+      "languageId": "elixir",
+      "scopes": ["source.elixir"],
+      "settings": {
+      },
+      "syntaxes": [
+        "Packages/Elixir/Syntaxes/Elixir.tmLanguage",
+      ]
+    },
+```
+
 ### XML
 
 Discussed in [this issue](https://github.com/tomv564/LSP/issues/578)
@@ -463,6 +483,51 @@ Requires IntelliJ to be running.
   "syntaxes": [
     "Packages/Java/Java.sublime-syntax"
   ]
+}
+```
+
+
+### Java<a name="java"></a>
+
+1. download and extract eclipse's [jdt-ls](https://download.eclipse.org/jdtls/snapshots/jdt-language-server-latest.tar.gz).
+2. add these configurations:
+```jsonc
+"jdtls":
+{
+    "command":
+    [
+        "java",
+        "--add-modules=ALL-SYSTEM",
+        "--add-opens",
+        "java.base/java.util=ALL-UNNAMED",
+        "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED",
+        "-Declipse.application=org.eclipse.jdt.ls.core.id1",
+        "-Dosgi.bundles.defaultStartLevel=4",
+        "-Declipse.product=org.eclipse.jdt.ls.core.product",
+        "-Dfile.encoding=UTF-8",
+        "-DwatchParentProcess={true|false}",  // false on windows, true other OSs
+        "-noverify",
+        "-Xmx1G",
+        "-XX:+UseG1GC",
+        "-XX:+UseStringDeduplication",
+        "-jar",
+        "PATH/TO/jdt-language-server-latest/plugins/org.eclipse.equinox.launcher_*.jar"
+        "-configuration",
+        "PATH/TO/jdt-language-server-latest/config_{win|mac|linux}", // depending on the OS
+        "-data",
+        "<TEMP_DIR>/${project_base_name}/jdt_ws"
+    ],
+    "enabled": true,
+    "languageId": "java",
+    "scopes":
+    [
+        "source.java"
+    ],
+    "syntaxes":
+    [
+        "Packages/Java/Java.sublime-syntax"
+    ]
 }
 ```
 
